# wealthgate

./: .env.example  .gitignore  .replit  README.md  claude_desktop_config.json  deploy.sh  main.py  pyproject.toml  railway.toml  replit.md  requirements.txt
wealthgate/: audit.py  authorization.py  market_data.py  mcp_server.py  mock_data.py  models.py
wealthgate/dashboard/: app.py
wealthgate/dashboard/static/: style.css
wealthgate/dashboard/templates/: agents.html  audit.html  base.html  proposal.html  queue.html  transcript.html
