[project]
name = "wealthgate"
version = "0.1.0"
description = "Agent-native investment infrastructure via MCP"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "aiosqlite>=0.19.0",
    "yfinance>=0.2.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wealthgate*"]

[tool.setuptools.package-data]
"wealthgate.dashboard" = ["templates/*.html", "static/*.css"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
